Changed how to approach the app
Instead of seperate classes for each page there will be base
that uses a loader to load all subpages

Exception is login, which will be loaded first on it's own

--- a/ui/ui_redesign/qml.qrc
+++ b/ui/ui_redesign/qml.qrc
@@ -25,5 +25,6 @@
         <file>qmldir</file>
         <file>pages/transactions/categories.qml</file>
         <file>design/plus.png</file>
+        <file>main.qml</file>
     </qresource>
 </RCC>
